Refining layout structure

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
+    - text: Go to contents
       link: /guides/example/
       icon: right-arrow
       variant: primary
@@ -18,7 +18,7 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Next steps (this will be replaced by the section cards)
 
 <CardGrid stagger>
 	<Card title="Update content" icon="pencil">
