Setting up deploy configs

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -17,6 +17,7 @@ hero:
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
+import Footer from '../../components/Footer.astro';
 
 ## Next steps (this will be replaced by the section cards)
 
@@ -34,3 +35,4 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		Learn more in [the Starlight Docs](https://starlight.astro.build/).
 	</Card>
 </CardGrid>
+<Footer />
