--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Go to contents
-      link: /guides/example/
+      link: /language-hub-v2/guides/example/
       icon: right-arrow
       variant: primary
     - text: Read the Starlight docs
